# octopus_devel

./: .gitignore  CMakeLists.txt
results/: ProjectionKernel.md
scripts/: build.sh  build_viper_gpu.sh  job_raven_gpu.sh  job_raven_gpu_cs.sh  job_viper_gpu.sh  job_viper_gpu_profile.sh
src/: blas.hpp  definitions.hpp  kernels.cpp  kernels.hpp  main.cpp
